[tool.poetry]
name = "Projeto ETL"
version = "0.1.0"
description = "Meu projeto de ETL"
authors = ["Joao Pedro Santos <jpedro.csantos@hotmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
