[tool.poetry]
name = "etl-project"
version = "0.1.0"
description = "\"Meu primeiro projeto de ETL\""
authors = ["Joao Pedro Santos <jpedro.csantos@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.3"
pandas = "^2.2.1"
openpyxl = "^3.1.2"
pytest = "^8.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
